[package]
name = "lunar-core"
version = "0.1.0"
edition = "2021"
description = "天文历算与历法核心库（VSOP87/ELPMPP02/章动/岁差/公历农历）"

[lib]
path = "src/lib.rs"

[features]
default = ["twofloat", "python-test"]
# 标量 Real 用 f64 替代 twofloat（wasm 减体积/提速）
real-f64 = []
# 启用后编译并运行 VSOP87/ELPMPP02 vs JPL DE406 的 Python 对比测试（需 libpython，无 PYO3_PYTHON/DE406 时运行时跳过）。缺省开启；无 Python 时可用 cargo test --no-default-features --features twofloat 跑其余测试。
python-test = ["dep:pyo3"]

[dependencies]
once_cell = "1.19"
# 标量 Real 默认后端（double-double）；启用 real-f64 时可不依赖
twofloat = { version = "0.8", optional = true }
num-traits = "0.2"
# 角度字符串解析（PlaneAngle.parse）
regex = "1.10"
# 仅当 feature python-test 时参与测试；默认开启以便 cargo test 跑全量测试，无 libpython 时用 --no-default-features --features twofloat
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }

